--- a/AppInterior/FoodPr/app/src/main/res/drawable/bg_product_item_adapter.xml
+++ b/AppInterior/FoodPr/app/src/main/res/drawable/bg_product_item_adapter.xml
@@ -3,6 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/black"/>
+            <corners android:radius="15dp"/>
         </shape>
     </item>
     <item
@@ -12,6 +13,7 @@
         android:top="1.5dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
+            <corners android:radius="15dp"/>
         </shape>
     </item>
 </layer-list>
