--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_setting.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_setting.xml
@@ -6,23 +6,117 @@
     android:layout_height="match_parent"
     tools:context=".Settings.SettingActivity">
 
-    <!-- NavigationView -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation_bar"
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/bg_setting"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view_2000"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="152dp"
+        android:background="@drawable/bg_user_setting"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="155dp" />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/user_48"
+        app:layout_constraintBottom_toBottomOf="@id/view_2000"
+        app:layout_constraintEnd_toEndOf="@id/view_2000"
+        app:layout_constraintStart_toStartOf="@+id/view_2000"
+        app:layout_constraintTop_toTopOf="@+id/view_2000" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingStart="30dp"
+        android:paddingEnd="30dp"
+        app:layout_constraintEnd_toEndOf="@id/view_2000"
+        app:layout_constraintStart_toStartOf="@id/view_2000"
+        app:layout_constraintTop_toBottomOf="@+id/view_2000">
+
+        <TextView
+            android:id="@+id/setting_user_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="NGUYỄN THÀNH CÔNG"
+            android:textAllCaps="true"
+            android:textColor="#000000"
+            android:textSize="17dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/setting_user_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="nguyenthanhcong@gmail.com"
+            android:textColor="#000000"
+            android:textSize="14dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/navi_bottom"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        app:itemIconTint="@drawable/selector_bottom_nav_item"
-        app:itemTextColor="@drawable/selector_bottom_nav_item"
-        app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/menu_navigation" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <!-- NavigationView -->
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_navigation_bar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/navi_bottom"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                app:itemIconTint="@drawable/selector_bottom_nav_item"
+                app:itemTextColor="@drawable/selector_bottom_nav_item"
+                app:labelVisibilityMode="unlabeled"
+                app:menu="@menu/menu_navigation" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="100dp"
+            android:background="@drawable/bg_home_notification">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:text="99"
+                android:textColor="#FFFFFF"
+                android:textSize="11dp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
