--- a/AppInterior/FoodPr/app/src/main/res/layout/activity_login.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/activity_login.xml
@@ -49,6 +49,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/edt_border"
             android:hint="....."
+            android:text="cong@gmail.com"
             android:paddingStart="20dp"
             android:paddingTop="10dp"
             android:paddingEnd="10dp"
@@ -71,6 +72,7 @@
             android:hint="....."
             android:inputType="textPassword"
             android:paddingStart="20dp"
+            android:text="cong12"
             android:paddingTop="10dp"
             android:paddingEnd="10dp"
             android:paddingBottom="10dp" />
