--- a/AppInterior/FoodPr/app/src/main/res/layout/fragment_description.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/fragment_description.xml
@@ -8,6 +8,8 @@
     <TextView
         android:id="@+id/product_detail_description_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:textSize="13sp" />
 
 </RelativeLayout>
