--- a/AppInterior/FoodPr/app/src/main/res/layout/product_item_adapter.xml
+++ b/AppInterior/FoodPr/app/src/main/res/layout/product_item_adapter.xml
@@ -18,8 +18,8 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView_item"
         android:layout_width="match_parent"
-        app:cardCornerRadius="15dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="15dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -79,5 +79,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:text="100000000 vnđ"
-        android:textSize="17sp" />
+        android:textColor="#000000"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 </RelativeLayout>
